<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.userCycle.RegisterFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp">

        <ImageView
            android:id="@+id/back_btu"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:elevation="@dimen/_5sdp"
            android:src="@drawable/ic_back_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_sub_category_title"
            android:fontFamily="@font/notosansarabic_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/create_new_account"
            android:textColor="@color/black_1F1F1F"
            android:textSize="@dimen/_16sdp" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_logo_basic_image" />

            <TextView
                style="@style/text_view_style_noto_sans_arabic_extra_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_gravity="start|center_vertical"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/welcome_in_mazadat"
                android:textAlignment="viewStart"
                android:textColor="@color/black_1F1F1F"
                android:textSize="@dimen/_15ssp" />

            <TextView
                style="@style/text_view_style_noto_sans_arabic_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/rejester_app"
                android:textAlignment="viewStart"
                android:textColor="@color/black_1F1F1F"
                android:textSize="@dimen/_11ssp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:boxStrokeColor="@color/app_color"
                app:boxStrokeErrorColor="@color/red"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                app:boxCornerRadiusTopStart="@dimen/_4sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:boxStrokeWidth="1dp"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/title">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_rejester_identify_edit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:drawableStart="@drawable/identify_image_selector"
                    android:gravity="start|center_vertical"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/identification_number"
                    android:inputType="phone"
                    android:textAlignment="viewStart"
                    android:maxLength="14"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_ABABAB"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:textColorHint="@color/hint_ABABAB"
                app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                app:boxCornerRadiusTopStart="@dimen/_4sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                app:boxStrokeErrorColor="@color/red"
                app:passwordToggleTint="@color/hint_ABABAB">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_rejester_birth_date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:drawableStart="@drawable/date_image_selector"
                    android:gravity="start|center_vertical"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/date_time"
                    android:inputType="phone"
                    android:textAlignment="viewStart"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_ABABAB"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/fragment_rejester_enter_btu"
                style="@style/text_view_style_noto_sans_arabic_bold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/shap_buttom_blue"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/ensure_data"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:backgroundTint="@null" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  style="@style/text_view_style_noto_sans_arabic_regular"
                    android:text="@string/already_user"
                    android:textColor="#495057"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/fragment_register_login_here_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                   style="@style/text_view_style_noto_sans_arabic_regular"
                    android:text="@string/login_text"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>




</LinearLayout>